--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -1,4 +1,4 @@
-.bottom
+.button
 {
     &:link,
     &:visited
@@ -54,4 +54,30 @@
         animation: moveInBottom 0.5s ease-out 0.75;
         animation-fill-mode: backwards;
     }
+}
+.button-text
+{
+    &:link,
+    &:visited
+    {
+        color: $color-primary-light;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary-light;
+        padding: .3rem;
+        font-size: $default-font-size;
+    }
+    &:hover
+    {
+        background-color: $color-primary-light;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+        transform: translate(-0.2rem);
+    }
+    &:active 
+    {
+        box-shadow: 0 .5rem 1rem rgba($color-black, 0.15);
+        transform: translateY(0);
+    }
+    transition: all .2s;
 }
