--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -1,7 +1,7 @@
 .header
 {
-    background-image: linear-gradient(to right bottom, rgba(93, 92, 97,0.5), rgb(216, 195, 165,0.8)), 
-    url("/resources/img/background1.jpg");
+    background-image: linear-gradient(to right bottom, rgba(93, 92, 97,0.5), rgba(216, 195, 165,0.8)), 
+    url("/img/background1.jpg");
     background-size: cover;
     background-position: top;
     position: relative;
