--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import './Base/utilities';
 @import './Components/composition';
 @import './Components/skill-box';
-
+@import './Components/card';
 
 //Base: setting...
 //Components reusable
