--- a/sass/Abstracts/_variables.scss
+++ b/sass/Abstracts/_variables.scss
@@ -6,7 +6,16 @@ $color-gray-mint:rgb(177, 162, 150);
 $color-gray-light: rgb(247, 247, 247);
 $color-white:rgb(255, 255, 255);
 $color-black: rgb(0, 0, 0);
+$color-secondary-light: rgb(255, 185, 0);
+$color-secondary-dark: rgb(255, 119, 48);
+$color-skill-light:rgb(85, 197, 122);
+$color-skill-dark:rgb(40, 180, 133);
+$color-text: rgb(120, 120, 120);
+$color-red-light: rgb(231, 113, 125);
+$color-red-dark:rgb(252, 68, 69);
 $default-font-size: 1.6rem;
 $grid-with:114rem;
 $gutter-vertical:8rem;
 $gutter-horizontal:6rem;
+
+
