--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -1,16 +1,22 @@
-.about-section
+.section-about
 {
     background-color: $color-gray-light;
     padding: 25rem 0;
     margin-top: -25rem;
 }
-.section-skills
+.section-socials
 {
     background-image: linear-gradient(to left top,rgba($color-primary-light,0.8),rgba($color-primary-dark,0.8)),
-    url("../img/background2.jpg");
+    url("/img/background2.jpg");
     background-size: cover;
     position: relative;
     padding: 20rem 0;
     clip-path: polygon(0 0, 100% 7%, 100% 100%, 0% 100%);
+    margin-top: -20rem;
+}
+.section-skills
+{
+    background-color: $color-gray-light;
+    padding: 25rem 0 10rem 0;
     margin-top: -20rem;
 }
