--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import './Components/composition';
 @import './Components/skill-box';
 @import './Components/card';
+@import './Components/favorite';
 
 //Base: setting...
 //Components reusable
