--- a/css/style.css
+++ b/css/style.css
@@ -133,14 +133,14 @@ body {
 .button-text {
   transition: all .2s; }
   .button-text:link, .button-text:visited {
-    color: #d8c3a5;
+    color: #5d5c61;
     display: inline-block;
     text-decoration: none;
-    border-bottom: 1px solid #d8c3a5;
+    border-bottom: 1px solid #5d5c61;
     padding: .3rem;
     font-size: 1.6rem; }
   .button-text:hover {
-    background-color: #d8c3a5;
+    background-color: #5d5c61;
     color: white;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
     transform: translate(-0.2rem); }
@@ -218,7 +218,7 @@ body {
   margin-top: -25rem; }
 
 .section-socials {
-  background-image: linear-gradient(to left top, rgba(216, 195, 165, 0.8), rgba(93, 92, 97, 0.8)), url("/img/background2.jpg");
+  background-image: linear-gradient(to left top, rgba(216, 195, 165, 0.4), rgba(93, 92, 97, 0.8)), url("/img/background2.jpg");
   background-size: cover;
   position: relative;
   padding: 20rem 0;
@@ -229,6 +229,12 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 10rem 0;
   margin-top: -20rem; }
+
+.section-favorite {
+  background-image: linear-gradient(to left top, rgba(255, 255, 255, 0.5), rgba(115, 149, 174, 0.3)), url("/img/background4.jpg");
+  background-size: cover;
+  position: relative;
+  padding: 5rem 0; }
 
 .u-center-text {
   text-align: center !important; }
@@ -384,3 +390,46 @@ body {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0); }
+
+.favorite {
+  width: 80%;
+  padding: 6rem;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.15);
+  font-size: 1.6rem;
+  border-radius: 100rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding-left: 9rem;
+  color: black; }
+  .favorite__shape {
+    width: 15rem;
+    height: 15rem;
+    background-color: orangered;
+    float: left;
+    position: relative;
+    clip-path: circle(50% at 50%);
+    transform: translateX(-3rem);
+    margin-top: -1rem;
+    shape-outside: circle(50% at 50% 50%); }
+  .favorite__img {
+    width: 100%;
+    height: 100%;
+    transition: all .3s; }
+  .favorite__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: white;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all .5s; }
+  .favorite:hover .favorite__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .favorite:hover .favorite__img {
+    filter: blur(0.5rem) brightness(70%);
+    transform: scale(1.1); }
