--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -69,16 +69,16 @@
     &:link,
     &:visited
     {
-        color: $color-primary-light;
+        color: $color-primary-dark;
         display: inline-block;
         text-decoration: none;
-        border-bottom: 1px solid $color-primary-light;
+        border-bottom: 1px solid $color-primary-dark;
         padding: .3rem;
         font-size: $default-font-size;
     }
     &:hover
     {
-        background-color: $color-primary-light;
+        background-color: $color-primary-dark;
         color: $color-white;
         box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
         transform: translate(-0.2rem);
