--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -6,7 +6,7 @@
 }
 .section-socials
 {
-    background-image: linear-gradient(to left top,rgba($color-primary-light,0.8),rgba($color-primary-dark,0.8)),
+    background-image: linear-gradient(to left top,rgba($color-primary-light,0.4),rgba($color-primary-dark,0.8)),
     url("/img/background2.jpg");
     background-size: cover;
     position: relative;
@@ -19,4 +19,12 @@
     background-color: $color-gray-light;
     padding: 25rem 0 10rem 0;
     margin-top: -20rem;
+}
+.section-favorite
+{
+    background-image: linear-gradient(to left top,rgba($color-white,0.5),rgba($color-blue-mint,0.3)),
+    url("/img/background4.jpg");
+    background-size: cover;
+    position: relative;
+    padding: 5rem 0;
 }
