--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@
 @import './Components/skill-box';
 @import './Components/card';
 @import './Components/favorite';
+@import './Components/contact';
+@import './Components/form';
 
 //Base: setting...
 //Components reusable
