--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -54,7 +54,7 @@
         animation: moveInBottom 0.5s ease-out 0.75;
         animation-fill-mode: backwards;
     }
-    &--blue
+    &--dark
     {
         background-color: $color-primary-dark;
         color: $color-white;
