--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -28,3 +28,8 @@
     position: relative;
     padding: 5rem 0;
 }
+.section-contact
+{
+    padding: 10rem 0;
+    background-image: linear-gradient(to left top,$color-primary-light,$color-primary-dark);
+}
