--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,8 @@
 @import './Components/favorite';
 @import './Components/contact';
 @import './Components/form';
+@import './Components/footer';
+@import './Components/popup';
 
 //Base: setting...
 //Components reusable
