--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import './Components/form';
 @import './Components/footer';
 @import './Components/popup';
+@import './Components/navigation';
 
 //Base: setting...
 //Components reusable
