--- a/sass/Abstracts/_variables.scss
+++ b/sass/Abstracts/_variables.scss
@@ -17,5 +17,6 @@ $default-font-size: 1.6rem;
 $grid-with:114rem;
 $gutter-vertical:8rem;
 $gutter-horizontal:6rem;
+$gutter-vertical-small: 6rem;
 
 
