--- a/sass/Components/_composition.scss
+++ b/sass/Components/_composition.scss
@@ -11,17 +11,17 @@
         transition: all .2s;
         &--p1
         {
-            left: 4rem;
+            left: 0;
             top: -2rem;
         }
         &--p2
         {
-            left: 30rem;
             right: 2rem;
+            top: 2rem;
         }
         &--p3
         {
-            left: 30%;
+            left: 10%;
             top: 10rem;
         }
         &:hover &__photo:not(:hover)
