--- a/sass/Components/_footer.scss
+++ b/sass/Components/_footer.scss
@@ -4,6 +4,7 @@
     padding: 10rem 0;
     font-size: 1.4rem;
     color: $color-primary-light;
+    height: 50vh;
     &__logo-box
     {
         text-align: center;
