--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './Abstracts/variables';
+@import './Abstracts/mixin';
 @import './Base/animation';
 @import './Base/base';
 @import './Base/typography';
@@ -17,16 +18,3 @@
 @import './Components/footer';
 @import './Components/popup';
 @import './Components/navigation';
-
-//Base: setting...
-//Components reusable
-//Layout footer, navbar
-//Pages name page home login
-//Abstracts animation fuction mixin
-//Themes form
-//Vendors css external
-
-// BEM block element modifier
-
-// px = rem * font size
-// 16px*62,5% =10px
