--- a/sass/Base/_utilities.scss
+++ b/sass/Base/_utilities.scss
@@ -11,3 +11,11 @@
 {
     margin-bottom: 1.5rem !important;
 }
+.button-favorite
+{
+    margin-top: -12rem !important;
+}
+.button-about
+{
+    margin-left: 1.5rem;
+}
