--- a/sass/Components/_card.scss
+++ b/sass/Components/_card.scss
@@ -4,18 +4,17 @@
     position: relative;
     height: 40rem;
     width: 90%;
-    margin-bottom: -5rem;
-    margin-top: -5rem;
+    margin-bottom: -4.5rem;
+    margin-top: -7rem;
     &__side
     {
         color: $color-white;
-        font-size: 2rem;
-        height: 45rem;
+        height: 40rem;
         transition: all .8s ease;
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
+        top: 3rem;
+        left: 3rem;
+        width: 90%;
         backface-visibility: hidden;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         border-radius: 5rem;
@@ -26,7 +25,6 @@
         }
         &--back
         {
-            background-color: green;
             transform: rotateY(180deg);
             &-1
             {
@@ -66,8 +64,8 @@
     }
     &__heading
     {
-        font-size: 2.8rem;
-        font-weight: 300;
+        font-size: 2.5rem;
+        font-weight: 350;
         text-align: right;
         text-transform: uppercase;
         color: $color-white;
@@ -79,7 +77,7 @@
     &__heading-span
     {
         border-radius: 5rem;
-        padding: 1rem 1.5rem;
+        padding: 0.3rem 1.3rem;
         -webkit-box-decoration-break:clone;
         &--1
         {
@@ -103,28 +101,28 @@
     }
     &__details
     {
-        padding: 3rem;
+        padding: 1rem;
         color: $color-text;
         ul
         {
             list-style: none;
-            width: 75%;
+            width: 70%;
             margin: 0 auto;
             li 
             {
                 text-align: center;
-                font-size: 1.5rem;
+                font-size: 1.7rem;
                 padding: 1rem;
-
                 &:not(:last-child)
                 {
-                    border-bottom: 1px solid rgb(219, 219, 219);
+                    border-bottom: 0.5px solid $color-text;
                 }
             }
         }
     }
     &__cta
     {
+        margin-top: 3rem;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -145,7 +143,7 @@
     }
     &__price-value
     {
-        font-size: 6rem;
+        font-size: 4rem;
         font-weight: 100;
         margin-bottom: 5rem;
     }
