--- a/sass/Components/_contact.scss
+++ b/sass/Components/_contact.scss
@@ -1,13 +1,16 @@
 .contact
 {
-    background-image: radial-gradient(150% 200% ellipse at -15%,rgba($color-white,0.8) 50%, transparent 50%),
+    background-image: radial-gradient(110% 290% ellipse at -15%,
+    rgba($color-gray-light,0.4) 50%, transparent 10%),
     url("/img/background5.jpg");
     background-size: cover;
     box-shadow: 0 1.5rem 4rem rgba($color-white,0.2);
     border-radius: 5rem;
-    height: 50rem;
+    height: 40rem;
+    margin-left: 8.5rem;
     &__form
     {
-        padding: 6rem;
+        padding: 3rem;
     }
+    width: 85%;
 }
