--- a/sass/Components/_popup.scss
+++ b/sass/Components/_popup.scss
@@ -12,8 +12,8 @@
     transition: all .5s;
     &__img
     {
-        width: 100%;
-        height: 60vh;
+        width: 35rem;
+        height: 40rem;
         display: block
     }
     &__content
@@ -41,7 +41,7 @@
     &__text
     {
         font-size: 1.8rem;
-        margin-bottom: 4rem;
+        margin-bottom: 2rem;
         column-count: 2;
         column-gap: 4rem;
         column-rule: 1px solid $color-primary-light;
