--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -4,11 +4,13 @@
     padding: 10rem 0;
     font-size: 1.4rem;
     color: $color-primary-light;
-    height: 50vh;
+    height: 25rem;
+    overflow: hidden;
     &__logo-box
     {
         text-align: center;
-        margin-bottom: 8rem;
+        margin-bottom: 3rem;
+        margin-top: -5rem;
     }
     &__logo
     {
@@ -21,6 +23,7 @@
         padding-top: 2rem;
         width: 70%;
         float: right;
+        margin-right: 10rem;
     }
     &__navigation
     {
@@ -31,6 +34,7 @@
     &__list
     {
         list-style: none;
+        margin-left: 10rem;
     }
     &__item
     {
