--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -1,12 +1,15 @@
 .header
 {
-    background-image: linear-gradient(to right bottom, rgba(93, 92, 97,0.5), rgba(216, 195, 165,0.8)), 
+    background-image: linear-gradient(to right bottom,
+    rgba($color-primary-dark,0.5), rgba($color-primary-light,0.8)), 
     url("/img/background1.jpg");
+    clip-path: polygon(0 0, 100% 3%, 100% 90%, 0 94%);
     background-size: cover;
     background-position: top;
+
     position: relative;
-    height: 95vh;
-    clip-path: polygon(0 0, 100% 4%, 100% 90%, 0% 100%);
+    height: 100vh;
+
     &__text-box
     {
         position: absolute;
@@ -22,7 +25,7 @@
     &__logo-box
     {
         position: absolute ;
-        top: 30px;
-        left: 30px;
+        top: 3rem;
+        left: 3rem;
     }    
 }
