--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -1,24 +1,23 @@
 .section-about
 {
     background-color: $color-gray-light;
-    padding: 25rem 0;
+    padding: 20rem 0;
     margin-top: -25rem;
 }
 .section-socials
 {
-    background-image: linear-gradient(to left top,rgba($color-primary-light,0.4),rgba($color-primary-dark,0.8)),
+    background-image: linear-gradient(to left top,rgba($color-primary-light,0.2),rgba($color-primary-dark,0.8)),
     url("/img/background2.jpg");
     background-size: cover;
     position: relative;
-    padding: 20rem 0;
+    padding: 15rem 0;
     clip-path: polygon(0 0, 100% 7%, 100% 100%, 0% 100%);
     margin-top: -20rem;
 }
 .section-skills
 {
     background-color: $color-gray-light;
-    padding: 25rem 0 10rem 0;
-    margin-top: -20rem;
+    padding: 5rem 0;
 }
 .section-favorite
 {
@@ -27,9 +26,10 @@
     background-size: cover;
     position: relative;
     padding: 5rem 0;
+    height: 70rem;
 }
 .section-contact
 {
     padding: 10rem 0;
-    background-image: linear-gradient(to left top,$color-primary-light,$color-primary-dark);
+    background-image: linear-gradient(to left top, $color-blue-mint,$color-gray-mint);
 }
