--- a/sass/main.css
+++ b/sass/main.css
@@ -1,4 +1,4 @@
-@keyframes animationtest {
+@keyframes animationTopDown {
   0% {
     opacity: 0;
     transform: translate(0, -100px);
@@ -41,35 +41,35 @@ body {
 
 body {
   font-family: "Lato", sans-serif;
-  font-weight: 400;
+  color: #787878;
+  font-weight: 500;
   font-size: 1.6rem;
-  line-height: 1.7;
-  color: #777777;
-  padding: 20px;
+  line-height: 1.5;
+  padding: 2rem;
 }
 
 .heading-primary {
   color: white;
   text-transform: uppercase;
   margin-bottom: 6rem;
-  animation: animationtest;
+  animation-name: animationTopDown;
   animation-duration: 2s;
-  animation-iteration-count: 2;
-  animation-delay: 1s;
+  animation-iteration-count: 1;
+  animation-delay: 0s;
 }
 
 .heading-primary--main {
   display: block;
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 400;
-  letter-spacing: 10px;
+  letter-spacing: 0.5rem;
 }
 
 .heading-primary--sub {
   display: block;
   font-size: 1.5rem;
   font-weight: 700;
-  letter-spacing: 5px;
+  letter-spacing: 0.2rem;
 }
 
 .heading-secondary {
@@ -77,7 +77,7 @@ body {
   text-transform: uppercase;
   font-weight: 900;
   display: inline-block;
-  letter-spacing: 1rem;
+  letter-spacing: 0.5rem;
   cursor: pointer;
   background-image: linear-gradient(to right, #d8c3a5, #5d5c61);
   color: transparent;
@@ -86,7 +86,7 @@ body {
 }
 
 .heading-secondary:hover {
-  transform: skewY(5deg) scale(1.1);
+  transform: skewY(5deg) scale(1.3);
   text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
@@ -97,107 +97,21 @@ body {
 }
 
 .paragraph {
-  font-size: 1.6rem;
+  font-size: 1.7rem;
+  text-align: left;
 }
 
 .paragraph:not(:last-child) {
   margin-bottom: 3rem;
 }
 
-.button:link, .button:visited {
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 15px 40px;
-  display: inline-block;
-  border-radius: 100px;
-  font-size: 1.6rem;
-  position: relative;
-}
-
-.button--white {
-  color: #777777;
-  background-color: white;
-}
-
-.button--white::after {
-  background-color: white;
-}
-
-.button:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-}
-
-.button:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.button:active {
-  outline: none;
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.button::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 100px;
-  z-index: -1;
-  transition: all .4s;
-}
-
-.button--animated {
-  animation: moveInBottom 0.5s ease-out 0.75;
-  animation-fill-mode: backwards;
-}
-
-.button--dark {
-  background-color: #5d5c61;
-  color: white;
-}
-
-.button--dark::after {
-  background-color: #5d5c61;
-}
-
-.button-text {
-  transition: all .2s;
-}
-
-.button-text:link, .button-text:visited {
-  color: #5d5c61;
-  display: inline-block;
-  text-decoration: none;
-  border-bottom: 1px solid #5d5c61;
-  padding: .3rem;
-  font-size: 1.6rem;
-}
-
-.button-text:hover {
-  background-color: #5d5c61;
-  color: white;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
-  transform: translate(-0.2rem);
-}
-
-.button-text:active {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  transform: translateY(0);
-}
-
 .header {
   background-image: linear-gradient(to right bottom, rgba(93, 92, 97, 0.5), rgba(216, 195, 165, 0.8)), url("/img/background1.jpg");
+  clip-path: polygon(0 0, 100% 3%, 100% 90%, 0 94%);
   background-size: cover;
   background-position: top;
   position: relative;
-  height: 95vh;
-  clip-path: polygon(0 0, 100% 4%, 100% 90%, 0% 100%);
+  height: 100vh;
 }
 
 .header__text-box {
@@ -214,33 +128,8 @@ body {
 
 .header__logo-box {
   position: absolute;
-  top: 30px;
-  left: 30px;
-}
-
-@keyframes animationtest {
-  0% {
-    opacity: 0;
-    transform: translate(0, -100px);
-  }
-  80% {
-    transform: translate(0, -20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  top: 3rem;
+  left: 3rem;
 }
 
 .row {
@@ -290,25 +179,96 @@ body {
   width: calc(3*(100%-3*6rem)/4)2*6rem;
 }
 
+.u-center-text {
+  text-align: center !important;
+}
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem !important;
+  margin-top: 3rem;
+}
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem !important;
+}
+
+.footer {
+  background-color: #5d5c61;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: #d8c3a5;
+  height: 50vh;
+}
+
+.footer__logo-box {
+  text-align: center;
+  margin-bottom: 8rem;
+}
+
+.footer__logo {
+  width: 10rem;
+  height: auto;
+}
+
+.footer__copyright {
+  border-top: 1px solid #d8c3a5;
+  padding-top: 2rem;
+  width: 70%;
+  float: right;
+}
+
+.footer__navigation {
+  border-top: 1px solid #d8c3a5;
+  padding-top: 2rem;
+  display: inline-block;
+}
+
+.footer__list {
+  list-style: none;
+}
+
+.footer__item {
+  display: inline-block;
+}
+
+.footer__item:not(:last-child) {
+  margin-right: 3rem;
+}
+
+.footer__link:link, .footer__link:visited {
+  color: #d8c3a5;
+  background-color: #5d5c61;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5rem;
+  transition: all .2s;
+}
+
+.footer__link:hover, .footer__link:active {
+  color: #d8c3a5;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+  transform: rotate(5deg) scale(1.1);
+}
+
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem 0;
+  padding: 20rem 0;
   margin-top: -25rem;
 }
 
 .section-socials {
-  background-image: linear-gradient(to left top, rgba(216, 195, 165, 0.4), rgba(93, 92, 97, 0.8)), url("/img/background2.jpg");
+  background-image: linear-gradient(to left top, rgba(216, 195, 165, 0.2), rgba(93, 92, 97, 0.8)), url("/img/background2.jpg");
   background-size: cover;
   position: relative;
-  padding: 20rem 0;
+  padding: 15rem 0;
   clip-path: polygon(0 0, 100% 7%, 100% 100%, 0% 100%);
   margin-top: -20rem;
 }
 
 .section-skills {
   background-color: #f7f7f7;
-  padding: 25rem 0 10rem 0;
-  margin-top: -20rem;
+  padding: 5rem 0;
 }
 
 .section-favorite {
@@ -323,17 +283,90 @@ body {
   background-image: linear-gradient(to left top, #d8c3a5, #5d5c61);
 }
 
-.u-center-text {
-  text-align: center !important;
+.button:link, .button:visited {
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 100px;
+  font-size: 1.6rem;
+  position: relative;
 }
 
-.u-margin-bottom-big {
-  margin-bottom: 8rem !important;
-  margin-top: 3rem;
+.button--white {
+  color: #787878;
+  background-color: white;
 }
 
-.u-margin-bottom-small {
-  margin-bottom: 1.5rem !important;
+.button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.button:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.button:active {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.button::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 100px;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.button--animated {
+  animation-name: moveInBottom;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+  animation-delay: 1.5s;
+  animation-fill-mode: backwards;
+}
+
+.button--dark {
+  background-color: #5d5c61;
+  color: white;
+}
+
+.button--dark::after {
+  background-color: #5d5c61;
+}
+
+.button-text {
+  transition: all .2s;
+}
+
+.button-text:link, .button-text:visited {
+  color: #5d5c61;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #5d5c61;
+  padding: .3rem;
+  font-size: 1.6rem;
+}
+
+.button-text:hover {
+  background-color: #5d5c61;
+  color: white;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translate(-0.5rem);
+}
+
+.button-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0.5rem);
 }
 
 .composition {
@@ -341,36 +374,32 @@ body {
 }
 
 .composition__photo {
-  width: 60%;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  width: 50%;
+  box-shadow: 0 1.5rem 5rem rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 10;
-  outline-offset: 1rem;
+  outline-offset: 0.5rem;
   transition: all .2s;
 }
 
 .composition__photo--p1 {
-  left: 4rem;
-  top: -2rem;
+  left: 0%;
+  top: 0%;
 }
 
 .composition__photo--p2 {
-  left: 30rem;
-  right: 2rem;
+  right: 5rem;
+  top: 2rem;
 }
 
 .composition__photo--p3 {
-  left: 30%;
-  top: 10rem;
-}
-
-.composition__photo:hover .composition__photo__photo:not(:hover) {
-  transform: scale(0.9);
+  left: 15%;
+  top: 12rem;
 }
 
 .composition__photo:hover {
-  transform: scale(1.1);
-  outline: 1.5rem solid #d8c3a5;
+  transform: scale(1.3);
+  outline: 1.2rem solid #d8c3a5;
   box-shadow: 0 2.5rem 4rem rgba(216, 195, 165, 0.5);
   z-index: 20;
 }
@@ -378,7 +407,7 @@ body {
 .skill-box {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
-  padding: 2.5rem 2.5rem 5rem 2.5rem;
+  padding: 2.5rem 2.5rem 4rem 2.5rem;
   text-align: center;
   border-radius: 5rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -711,64 +740,6 @@ body {
   display: none;
 }
 
-.footer {
-  background-color: #5d5c61;
-  padding: 10rem 0;
-  font-size: 1.4rem;
-  color: #d8c3a5;
-}
-
-.footer__logo-box {
-  text-align: center;
-  margin-bottom: 8rem;
-}
-
-.footer__logo {
-  width: 10rem;
-  height: auto;
-}
-
-.footer__copyright {
-  border-top: 1px solid #d8c3a5;
-  padding-top: 2rem;
-  width: 70%;
-  float: right;
-}
-
-.footer__navigation {
-  border-top: 1px solid #d8c3a5;
-  padding-top: 2rem;
-  display: inline-block;
-}
-
-.footer__list {
-  list-style: none;
-}
-
-.footer__item {
-  display: inline-block;
-}
-
-.footer__item:not(:last-child) {
-  margin-right: 3rem;
-}
-
-.footer__link:link, .footer__link:visited {
-  color: #d8c3a5;
-  background-color: #5d5c61;
-  text-transform: uppercase;
-  text-decoration: none;
-  display: inline-block;
-  border-radius: 5rem;
-  transition: all .2s;
-}
-
-.footer__link:hover, .footer__link:active {
-  color: #d8c3a5;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
-  transform: rotate(5deg) scale(1.1);
-}
-
 .popup {
   height: 100vh;
   width: 100%;
@@ -865,7 +836,7 @@ body {
 }
 
 .navigation__background {
-  background-image: radial-gradient(#b1a296, #5d5c61);
+  background-image: linear-gradient(to right bottom, rgba(93, 92, 97, 0.5), rgba(216, 195, 165, 0.8)), url("/img/background1.jpg");
   height: 6rem;
   width: 6rem;
   position: fixed;
@@ -877,7 +848,7 @@ body {
 }
 
 .navigation__checkbox:checked ~ .navigation__background {
-  transform: scale(80);
+  transform: scale(15);
 }
 
 .navigation__checkbox:checked ~ .navigation__nav {
@@ -898,9 +869,9 @@ body {
 
 .navigation__list {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 47%;
+  left: 60%;
+  transform: translate(80%, -80%);
   list-style: none;
   text-align: center;
 }
@@ -930,8 +901,7 @@ body {
 
 .navigation__icon {
   position: relative;
-  margin-top: 10.2rem;
-  height: 30rem;
+  margin-top: 3.2rem;
 }
 
 .navigation__icon, .navigation__icon::before, .navigation__icon::after {
@@ -945,13 +915,36 @@ body {
   content: "";
   position: absolute;
   left: 0;
+  transition: all .2s;
 }
 
 .navigation__icon::before {
-  top: -8rem;
+  top: -.8rem;
 }
 
 .navigation__icon::after {
-  top: 8rem;
+  top: .8rem;
+}
+
+.navigation__button:hover .navigation__icon::before {
+  top: -1rem;
+}
+
+.navigation__button:hover .navigation__icon::after {
+  top: 1rem;
+}
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent;
+}
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  top: 0;
+  transform: rotate(135deg);
+}
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  top: 0;
+  transform: rotate(-135deg);
 }
 /*# sourceMappingURL=main.css.map */
